src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>CRM_Version__c</fullName>
        <label>CRM Version</label>
        <picklist>
            <picklistValues>
                <fullName>Junxure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SalesForce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Dynamics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>